# opensm

./: .gitignore  Makefile.am  configure.ac  default.conf  gen_ver.sh
osmeventexportplugin/: Makefile.am  libosmeventexportplugin.map
osmeventexportplugin/src/: osmeventexportplugin.c
osmeventlogplugin/: Makefile.am  libosmeventlogplugin.map  libosmeventlogplugin.ver
osmeventlogplugin/src/: osmeventlogplugin.c
